<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.unizg.foi.uzdiz.ibeusan20</groupId>
	<artifactId>ibeusan20_zadaca_2</artifactId>
	<version>2.0.0</version>
	<packaging>pom</packaging>
	<name>ibeusan20_zadaca_2</name>
	<description>Turistička agencija - Zadaća 2</description>

	<modules>
		<module>ibeusan20_zadaca_2_lib</module>
		<module>ibeusan20_zadaca_2_app</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>

		<!-- Plugin versions -->

		<maven.clean>3.4.1</maven.clean>
		<maven.resources>3.3.1</maven.resources>
		<maven.compiler>3.14.0</maven.compiler>
		<maven.surefire>3.5.2</maven.surefire>
		<maven.javadoc>3.11.2</maven.javadoc>
		<maven.dependency>3.8.1</maven.dependency>
		<maven.assembly>3.7.1</maven.assembly>
		<maven.jar>3.4.2</maven.jar>
		<maven.install>3.1.4</maven.install>
	</properties>


	<build>

		<finalName>ibeusan20_zadaca_2</finalName>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<release>${java.version}</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven.clean}</version>
			</plugin>
		</plugins>
	</build>


</project>